--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "license": ["GPL-2.0-or-later"],
     "keywords": ["TYPO3 CMS"],
     "require": {
-        "league/oauth2-client": "^2.6.0",
-        "typo3/json-response": "*@dev"
+        "league/oauth2-client": "^2.6.1"
     },
     "autoload": {
         "psr-4": {
